    - `-o -' sends output to standard output;
    - files are no more unnecessarily overwritten if multiple `-o'
      options are specified (only the last one is honoured).
 * The error messages have been generally improved and made more detailed.
   A prominent example of this improvement is the increased level of
   details in messages about I/O failures, with the explicit indication of
   the failure's reasons, e.g. `No such file or directory' or `Permission
   denied'.
 * Now ratfor complains if given more than one non-option arguments,
   instead of silently discarding all the extra arguments.
 * Messages about usage errors involving unknown option or options called
   in the wrong way have now the format:
    <PROGNAME>: `-<OPTION>': <ERROR-MESSAGE>

New in 1.0i
-----------
 
 * Ratfor is now fully case-sensible, both respect to its input and to its
   output.  In particular, this means that output is no more converted to
   lowercase (this conversion was tricky, since e.g. strings and comments
   had to be left unchanged, and was cause of some bugs and dark corner
   cases).  This new behaviour shouldn't cause problems, as modern fortran
   compilers, although case-insensible, are smart enough not to barf on
   mixed-case input.
 * The line numbers in error messages should now be always correct, even
   when inclusion of files or expansion of macros are involved. Alas, this
   was not the case before.
 * An input line starting with `%' is always passed *truly* verbatim to
   output, without line wrapping (if the user wants to output raw fortran
   code, we expect him to know what he's doing, so we must be as
   unobtrusive as possible).  Previously, even the `%'-quoted lines were
   subjected to line wrapping, so that they did not exceed the maximum
   line lenght allowed in valid fortran code.
 * Now an underscore character `_' at the end of a line do continuation
   *only* for the next newline character, while previously it did line