@@ -1,5 +1,7 @@
 #ifndef RAT4_PARSE_H
 #  define RAT4_PARSE_H 1
+BEGIN_C_DECLS
 void parse(void);
+END_C_DECLS
 #endif
 /* vim: set ft=c ts=4 sw=4 et : */
